--- a/second.html
+++ b/second.html
@@ -15,11 +15,11 @@
 			<div class="form-group">
 				<label for="weight">Выберите вариант:</label>
 				<select id="weight" name="weight">
-					<option value="1000">до 5 тыс. тг</option>
-					<option value="15000">до 15 тыс. тг</option>
-					<option value="5000">до 5 кг</option>
-					<option value="15000">до 15 кг</option>
-					<option value="50000">до 50 кг</option>
+					<option value="5t">до 5 тыс. тг</option>
+					<option value="15t">до 15 тыс. тг</option>
+					<option value="5kg">до 5 кг</option>
+					<option value="15kg">до 15 кг</option>
+					<option value="50kg">до 50 кг</option>
 					<option value="50001">>50 кг</option>
 				</select>
 			</div>
