--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="result">Желаемый выхлоп:</label>
+				<label for="result">Желаемая маржа:</label>
 				<input type="number" id="result" name="result">
 			</div>
 			<button type="button" onclick="calculate()">Рассчитать</button>
